# todo

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  pch.hpp  todo  todotest
src/: CMakeLists.txt  InputSettings.cpp  InputSettings.hpp  input_parser.cpp  main.cpp
src/todo/: CMakeLists.txt  Database.cpp  Database.hpp  DatabaseCommand.cpp  DatabaseCommand.hpp  DatabaseCommandVisitor.cpp  DatabaseCommandVisitor.hpp  Date.cpp  Date.hpp  InputSettings.cpp  InputSettings.hpp  Task.hpp
test/: CMakeLists.txt  DatabaseCommandTest.cpp  DatabaseTest.cpp  DateTest.cpp  FactorialTest.cpp  InputSettingsTest.cpp  SerializationTest.cpp
